--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -1,19 +1,87 @@
 @import '../common/style/common-style';
 
-:host{
-  display : block;
-  position : relative;
+//:host{
+//  display : inline-block;
+//}
+//
+//#root-box {
+//  position : relative;
+//}
+//
+//#shadow-box {
+//  position : absolute;
+//  top : 2px;
+//  bottom : 5px;
+//  left : 2px;
+//  right : 2px;
+//  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+//
+//  @include flex-column-center;
+//
+//  overflow : hidden;
+//
+//  #main-content {
+//    @include flex-column-center;
+//    width : 100%;
+//    padding : 10px;
+//    box-sizing: border-box;
+//    flex-grow:1;
+//
+//    #card-image{
+//      width : 100%;
+//      flex-grow:1;
+//      background-position: center center;
+//      background-repeat: no-repeat;
+//      background-size : contain;
+//    }
+//
+//    #card-content {
+//      width : 100%;
+//      padding-top : 10px;
+//    }
+//  }
+//
+//  #hash-tag-container {
+//    width : 100%;
+//    box-sizing : border-box;
+//    padding : 10px;
+//    text-align : left;
+//  }
+//}
+:host {
+  display: inline-block;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+  overflow: hidden;
 }
 
-#shadow-box {
-  position : absolute;
-  top : 2px;
-  bottom : 5px;
-  left : 2px;
-  right : 2px;
-  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-
+//TODO 상속안받게...!
+#flex-card-box {
   @include flex-column-center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-top: 10px;
 
-  overflow : hidden;
+  #card-image-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+
+  #card-image {
+    width: 100%;
+    flex-grow: 1;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  #hash-tag-container {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    text-align: left;
+  }
 }
