## Remove Skill-Card-Component
## Modify Guide-Component
 - simplify

## Modify About-Component
 - change skill-card-component to mommoo card component
 - build card data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,20 @@
-<!--<app-header id="header" (menuListItemClick)="onMenuClick($event)"></app-header>-->
-<!--<div #shadowHeader id="shadow-header"></div>-->
-<!--<div id="content">-->
-  <!--<app-profile></app-profile>-->
-  <!--<app-about></app-about>-->
-  <!--<app-portfolio></app-portfolio>-->
-<!--</div>-->
-<!--<app-footer id="footer"></app-footer>-->
-<div style="height:500px;">
-  <mommoo-card
-    [cardWidth]="'wrap'"
-    [cardHeight]="'wrap'">
-    good~~
-  </mommoo-card>
+<app-header id="header" (menuListItemClick)="onMenuClick($event)"></app-header>
+<div #shadowHeader id="shadow-header"></div>
+<div id="content">
+<app-profile></app-profile>
+<app-about></app-about>
+<app-portfolio></app-portfolio>
 </div>
-
-
+<app-footer id="footer"></app-footer>
+<!--<div style="height:500px; width: 500px; overflow : hidden">-->
+  <!--<mommoo-card-->
+    <!--[cardWidth]="'fit'"-->
+    <!--[cardHeight]="'fit'"-->
+    <!--[hashTagMessages]="['hello','mommoo','hello','mommoo','hello','mommoo','hello','mommoo','hello','hamzzi']"-->
+    <!--[cardImage]="'/assets/images/spring.png'"-->
+    <!--[cardImageBoxStyle]="{width : '100px', height: '100px'}">-->
+    <!--<div style="text-align : center">SpringBoot</div>-->
+  <!--</mommoo-card>-->
+<!--</div>-->
 
 
