--- a/src/app/view/about/about.component.html
+++ b/src/app/view/about/about.component.html
@@ -7,37 +7,18 @@
   <p>이러한 개발 철학을 바탕으로, 프로그래밍 기본기를 단단하게 쌓았습니다.</p>
   <p>아래의 리스트는 제가 개발 가능한 언어와 환경을 나타냈습니다.</p>
 </ui-guide>
-<ui-guide [title]="'language'" [style.padding]="'20px'">
+<ui-guide [title]="'Language & Environment'" [style.padding]="'20px'">
   <mommoo-grid-list
     [maxColumnNum]="maxColumnNum"
     [rowHeight]="'1:1'">
-    <mommoo-grid-tile *ngFor="let cardProperty of programingLangCardProps"
+    <mommoo-grid-tile *ngFor="let cardProperty of cardProps"
       [colSpan]="1"
       [rowSpan]="1">
       <div class="card-container">
         <mommoo-card
           [hashTagMessages]="cardProperty.hashTagMessages"
           [cardImage]="cardProperty.imagePath"
-          [cardImageBoxStyle]="{padding : '10px'}"
-          [themeColor]="'#e91e63'">
-          <div class="card-title-name" [style.fontSize]="cardTitleFontSize">{{cardProperty.name}}</div>
-        </mommoo-card>
-      </div>
-    </mommoo-grid-tile>
-  </mommoo-grid-list>
-</ui-guide>
-<ui-guide [title]="'Environment'" [style.padding]="'20px'">
-  <mommoo-grid-list
-    [maxColumnNum]="maxColumnNum"
-    [rowHeight]="'1:1'">
-    <mommoo-grid-tile *ngFor="let cardProperty of environmentCardProps"
-      [colSpan]="1"
-      [rowSpan]="1">
-      <div class="card-container">
-        <mommoo-card
-          [hashTagMessages]="cardProperty.hashTagMessages"
-          [cardImage]="cardProperty.imagePath"
-          [cardImageBoxStyle]="{padding : '10px'}"
+          [cardImageBoxStyle]="{padding : '30px'}"
           [themeColor]="'#e91e63'">
           <div class="card-title-name" [style.fontSize]="cardTitleFontSize">{{cardProperty.name}}</div>
         </mommoo-card>
