--- a/src/app/ui/card/card.component.html
+++ b/src/app/ui/card/card.component.html
@@ -1,27 +1,20 @@
-<!--<div [ngStyle]="rootBoxStyle" id="root-box">-->
-  <!--<div id="shadow-box" [ngStyle]="shadowBoxStyle">-->
-    <!--<div id="main-content">-->
-      <!--<div *ngIf="cardImage" [ngStyle]="imageStyle" [style.background-image]="'url('+cardImage+')'" id="card-image"></div>-->
-      <!--<div id="card-content"><ng-content></ng-content></div>-->
-    <!--</div>-->
-    <!--<div *ngIf="hashTagMessages" id="hash-tag-container">-->
-      <!--<mommoo-hash-tag *ngFor="let message of hashTagMessages"-->
-                       <!--[message]="message"-->
-                       <!--[color]="hashTagColor"></mommoo-hash-tag>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
 <div id="flex-card-box">
-  <div id="card-image-box" [ngStyle]="cardImageBoxStyle">
-    <div id="card-image" *ngIf="cardImage" [ngStyle]="imageStyle" [style.background-image]="'url('+cardImage+')'"></div>
+  <div *ngIf="cardTitle" id="card-title-box" [ngStyle]="cardTitleBoxStyle">{{cardTitle}}</div>
+  <div *ngIf="cardImage" id="card-image-box" [ngStyle]="cardImageBoxStyle">
+    <div id="card-image" [ngStyle]="imageStyle" [style.background-image]="'url('+cardImage+')'"></div>
   </div>
-  <div id="card-content">
+  <div id="card-content-box">
     <ng-content></ng-content>
   </div>
   <div *ngIf="hashTagMessages" id="hash-tag-container">
     <mommoo-hash-tag *ngFor="let message of hashTagMessages"
                      [message]="message"
                      [color]="hashTagColor"></mommoo-hash-tag>
+  </div>
+  <div *ngIf="actionButtonProps" id="action-view-container">
+    <mommoo-action-view [actionButtonProps]="actionButtonProps"
+                        [themeColor]="themeColor"
+                        (actionEventEmitter)="actionButtonClicks($event)"></mommoo-action-view>
   </div>
 </div>
 
