--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -6,13 +6,20 @@
   border-radius : 5px;
 }
 
-//TODO 상속안받게...!
 #flex-card-box {
   @include flex-column-center;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   padding-top: 10px;
+
+  #card-title-box {
+    align-self : start;
+    padding : 6px 16px;
+    font-size : 20px;
+    font-weight: bold;
+    color : black;
+  }
 
   #card-image-box {
     display: flex;
@@ -25,12 +32,11 @@
   #card-image {
     width: 100%;
     flex-grow: 1;
-    background-position: center center;
-    background-repeat: no-repeat;
+    background : center center no-repeat;
     background-size: contain;
   }
 
-  #hash-tag-container {
+  #hash-tag-container, #action-view-container {
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
