--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -1,15 +1,19 @@
 @import '../common/style/common-style';
 :host {
-  display: inline-block;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  overflow: hidden;
-  border-radius : 5px;
+  display : block;
+  position : relative;
 }
 
 #flex-card-box {
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+  overflow: hidden;
+  border-radius : 5px;
+  position : absolute;
   @include flex-column-center;
-  width: 100%;
-  height: 100%;
+  top : 2px;
+  left : 2px;
+  bottom : 3px;
+  right : 2px;
   box-sizing: border-box;
   padding-top: 10px;
 
