--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -1,21 +1,27 @@
 @import '../common/style/common-style';
 :host {
-  display : block;
+  display : inline-block;
   position : relative;
+  visibility: hidden;
+}
+
+#shadow-visible-rect {
+  padding : 3px 3px 5px 3px;
+  position : absolute;
+  width : 100%;
+  height : 100%;
+  box-sizing: border-box;
 }
 
 #flex-card-box {
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  overflow: hidden;
   border-radius : 5px;
-  position : absolute;
   @include flex-column-center;
-  top : 2px;
-  left : 2px;
-  bottom : 3px;
-  right : 2px;
+  width : 100%;
+  height : 100%;
   box-sizing: border-box;
   padding-top: 10px;
+  overflow: hidden;
 
   #card-title-box {
     align-self : start;
@@ -29,8 +35,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    flex-grow: 1;
     overflow: hidden;
+    flex-grow: 1;
   }
 
   #card-image {
