## Remove Test Component
## Modify Mommoo-UI
 - set color

--- a/src/app/ui/guide/guide.component.html
+++ b/src/app/ui/guide/guide.component.html
@@ -1,4 +1,4 @@
-<div id="title">{{title | uppercase}}</div>
+<div id="title" [style.color]="titleColor">{{title | uppercase}}</div>
 <div id="content" [ngStyle]="contentStyle">
   <ng-content></ng-content>
 </div>
