--- a/src/app/ui/guide/guide.component.scss
+++ b/src/app/ui/guide/guide.component.scss
@@ -2,7 +2,8 @@
   display : block;
 }
 #title {
-  color : #e91e63;
+  //color : #e91e63;
+  color : #ff5555;
   text-align : center;
   font-weight: bold;
   font-size : 25px;
