--- a/src/app/ui/label/label.component.scss
+++ b/src/app/ui/label/label.component.scss
@@ -11,11 +11,9 @@
   justify-content: center;
   width: 100%;
 
-  &:before {
-    content : "#";
+  #mark {
     padding-right : 5px;
     font-weight: bold;
     font-size : 4rem;
-    color : #e91e63;
   }
 }
