--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -1,7 +1,7 @@
-<ui-label [title]="'Profile'"></ui-label>
+<ui-label [title]="'Profile'" [markColor]="themeColor"></ui-label>
 <div class="flex-row">
-  <app-name-card></app-name-card>
-  <ui-guide [title]="'welcome message'">
+  <view-name-card></view-name-card>
+  <ui-guide [title]="'welcome message'" [titleColor]="themeColor">
     <p>편리하고 멋진 프로그램을 만들고 싶은 개발자 최경수 입니다.</p>
     <p>저는 개발자 명 Mommoo로 활동하고 있습니다.</p>
     <p>프로그램 개발을 즐기며, 여러 개발 경험을 보유하고 있습니다.</p>
