--- a/src/app/view/about/about.component.scss
+++ b/src/app/view/about/about.component.scss
@@ -1,11 +1,3 @@
-.card-container {
-  width: 100%;
-  height : 100%;
-  padding : 5px;
-  box-sizing: border-box;
-}
-
-.card-title-name {
+.card-content {
   text-align : center;
-
 }
