--- a/src/app/view/portfolio/portfolio.component.html
+++ b/src/app/view/portfolio/portfolio.component.html
@@ -1,6 +1,18 @@
-<ui-label [title]="'Portfolio'"></ui-label>
-<div id="test">
-  <div>contents
-    <div>test!!</div>
-  </div>
-</div>
+<ui-label [title]="'Portfolio'" [markColor]="themeColor"></ui-label>
+<mommoo-masonry-layout [maxColumnNum]="4">
+  <mommoo-masonry-tile *ngFor="let projectCardData of projectCardDatas">
+    <mommoo-card
+      [cardImage]="projectCardData.imagePath"
+      [cardImageAnim]="true"
+      [cardWidth]="'fit'"
+      [cardHeight]="'wrap'"
+      [hashTagMessages]="projectCardData.skillSets"
+      [cardTitle]="projectCardData.title"
+      [actionButtonNames]="['Read More']"
+      (actionEventEmitter)="projectCardData.onClickEvent()">
+      <view-limited-textarea class="portfolio-card-content"
+                             [text]="projectCardData.summary"
+                             [limitNumber]="100"></view-limited-textarea>
+    </mommoo-card>
+  </mommoo-masonry-tile>
+</mommoo-masonry-layout>
