## Append Style Element to Card Component in MommooUI  - enable title text line breaking

--- a/src/app/ui/card/card.component.scss
+++ b/src/app/ui/card/card.component.scss
@@ -24,6 +24,7 @@
   overflow: hidden;
 
   #card-title-box {
+    word-break : break-word;
     align-self : start;
     padding : 6px 16px;
     font-size : 20px;
