--- a/src/app/ui/card/card.component.css
+++ b/src/app/ui/card/card.component.css
@@ -23,6 +23,7 @@
   padding-top: 10px;
   overflow: hidden; }
   #flex-card-box #card-title-box {
+    word-break: break-word;
     align-self: start;
     padding: 6px 16px;
     font-size: 20px;
