## Build Basic App-Router Structure

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,8 @@
   flex-grow: 1; }
 
 #fixed-header-wrapper {
-  position: fixed; }
+  position: fixed;
+  z-index: 999; }
 
 @media all and (min-width: 1025px) {
   :host {
@@ -27,6 +28,7 @@
 
   #fixed-header-wrapper {
     width: 100%;
-    height: auto; } }
+    height: auto;
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12); } }
 
 /*# sourceMappingURL=app.component.css.map */
