--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
   </div>
 </div>
 <div id="content-wrapper-area">
-  <div>hi im content!!</div>
+  <router-outlet></router-outlet>
   <div id="footer-area"></div>
 </div>
