--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,9 @@ $expandedHeaderWidth : 300px;
 
 #fixed-header-wrapper {
   position : fixed;
+  z-index : 999;
 }
+
 // Desktop
 @media all and (min-width : 1025px) {
   :host {
@@ -41,5 +43,6 @@ $expandedHeaderWidth : 300px;
   #fixed-header-wrapper {
     width: 100%;
     height : auto;
+    box-shadow : 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
   }
 }
