## Change Basic App-Router Structure  - moving routing code from app package to view package  - create template component ts file ( list of router-outlet view )

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
   </div>
 </div>
 <div id="content-wrapper-area">
-  <router-outlet></router-outlet>
-  <div id="footer-area"></div>
+  <view-contents></view-contents>
+  <div id="footer-area"><view-footer></view-footer></div>
 </div>
