## Change Way of displaing nav-list from using Angular ngIf to css display-property change  - since app view template is cloning header for block property, when using angular ngIf, view template not working properly so, change display way to display-property change

--- a/src/app/view/header/menu/menu-list/menu-list.component.scss
+++ b/src/app/view/header/menu/menu-list/menu-list.component.scss
@@ -39,9 +39,8 @@ nav {
 
 // Desktop
 @media all and (min-width : 1025px) {
-
-  #menu-button {
-    display : none;
+  nav {
+    display : block;
   }
 }
 
@@ -49,6 +48,7 @@ nav {
 @media all and (max-width:1024px) {
 
   nav {
+    display : none;
     .nav-item {
       padding : 1rem 0;
     }
