--- a/src/app/view/header/menu/menu-list/menu-list.component.html
+++ b/src/app/view/header/menu/menu-list/menu-list.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="isItemShown()" #nav>
+<nav #nav>
   <ul>
     <ng-container *ngFor="let menuListItem of menuItems;">
       <li class="nav-item" (click)="menuItemClickEvent(menuListItem)">
