## Develop Header Package Independently  - I want to building header component independent of other component which are header event and header css and etc.
## Develop HeaderMenuListEventService
 - To handle events that worked with header package elements independent of other component

## Simplify Source Code in Header Package
 - Removing unnecessary source code
 - Simplify code logic
 - To proper work header, changing working way of header component

--- a/src/app/view/header/header.component.html
+++ b/src/app/view/header/header.component.html
@@ -1,12 +1,10 @@
-<header>
+<header id="header">
   <div class="flex-column-line">
-    <div id="title" #title>{{'mommoo portfolio' | uppercase}}</div>
+    <div class="title">{{'mommoo portfolio' | uppercase}}</div>
 
-    <view-menu-button id="menu-button"
+    <view-menu-button class="menu-button"
                      (menuButtonEvent)="fireMenuButtonEvent($event)"></view-menu-button>
   </div>
 
-  <view-menu-list id="menu-list"
-    (menuListItemClick)="fireMenuListItemClickEvent($event)"></view-menu-list>
+  <view-menu-list (menuListItemClick)="fireMenuListItemClickEvent()"></view-menu-list>
 </header>
-
