--- a/src/app/view/header/header.component.scss
+++ b/src/app/view/header/header.component.scss
@@ -1,4 +1,10 @@
-header{
+:host {
+  display : block;
+  width : 100%;
+  height : 100%;
+}
+#header{
+  width : 100%;
   height : 100%;
   background-color : #f3f3f3;
   color : black;
@@ -16,7 +22,7 @@ header{
     justify-content: space-between;
   }
 
-  #title {
+  .title {
     padding : 1rem 0;
     font-size   : 1.5rem;
     font-weight : bold;
@@ -32,19 +38,12 @@ header{
 
 // Desktop
 @media all and (min-width : 1025px) {
-  header {
+  #header {
     #title {
       padding : 4rem 0;
     }
   }
-  #menu-button {
+  .menu-button {
     display : none;
-  }
-}
-
-//tablet and mobile
-@media all and (max-width:1024px) {
-  header{
-    box-shadow : 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
   }
 }
