--- a/src/app/view/header/menu/menu-list/menu-list.component.html
+++ b/src/app/view/header/menu/menu-list/menu-list.component.html
@@ -1,8 +1,8 @@
 <nav #nav>
   <ul>
-    <ng-container *ngFor="let menuListItem of menuItems;">
-      <li class="nav-item" (click)="menuItemClickEvent(menuListItem)">
-        {{menuListItem.toName() | uppercase}}
+    <ng-container *ngFor="let menuItemName of menuItemNames;">
+      <li class="nav-item" (click)="menuItemClickEvent(menuItemName)">
+        {{menuItemName | uppercase}}
       </li>
     </ng-container>
   </ul>
