--- a/src/app/view/header/menu/menu-list/menu-list.component.scss
+++ b/src/app/view/header/menu/menu-list/menu-list.component.scss
@@ -40,7 +40,7 @@ nav {
 // Desktop
 @media all and (min-width : 1025px) {
   nav {
-    display : block;
+    display : block !important;
   }
 }
 
@@ -48,7 +48,7 @@ nav {
 @media all and (max-width:1024px) {
 
   nav {
-    display : none;
+    display : none !important;
     .nav-item {
       padding : 1rem 0;
     }
