## Refactoring Source Code in Header Package  - removing unnecessary code in header package  - optimizing code in header package

--- a/src/app/view/header/menu/menu-list/menu-list.component.css
+++ b/src/app/view/header/menu/menu-list/menu-list.component.css
@@ -28,10 +28,10 @@ nav {
 
 @media all and (min-width: 1025px) {
   nav {
-    display: block !important; } }
+    display: block; } }
 @media all and (max-width: 1024px) {
   nav {
-    display: none !important; }
+    display: none; }
     nav .nav-item {
       padding: 1rem 0; } }
 
