--- a/src/app/view/portfolio/portfolio.component.css
+++ b/src/app/view/portfolio/portfolio.component.css
@@ -1,4 +1,8 @@
+:host {
+  display: block;
+  background-color: #e6e6e6; }
+
 .portfolio-card-content {
-  padding: 0 20px; }
+  padding: 20px 20px 0 20px; }
 
 /*# sourceMappingURL=portfolio.component.css.map */
