--- a/src/app/view/portfolio/portfolio.component.scss
+++ b/src/app/view/portfolio/portfolio.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display : block;
+  background-color: #e6e6e6;
+}
 .portfolio-card-content {
-  padding : 0 20px;
+  padding : 20px 20px 0 20px;
 }
