## Re-Constructing moomoo-library  - consist packages contained that data-structure, handler, ui, until
## Build 'handler' package
 - create 'window' object event handler

## Build 'ui' package
 - move current package from previous location

## Build 'util' package
 - create 'util' class that use javascript api usefully

## Refactoring as a whole

--- a/src/app/mommoo-library/ui/card/card.component.css
+++ b/src/app/mommoo-library/ui/card/card.component.css
@@ -40,7 +40,8 @@
     flex-grow: 1;
     background: center center no-repeat;
     background-size: contain; }
-  #flex-card-box #hash-tag-container, #flex-card-box #action-view-container {
+  #flex-card-box .container {
+    display: block;
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
