--- a/src/app/mommoo-library/ui/banner/banner.component.css
+++ b/src/app/mommoo-library/ui/banner/banner.component.css
@@ -1,8 +1,14 @@
-#title {
-  font-weight: 900;
-  text-align: center; }
+:host(#b) {
+  display: flex;
+  flex-direction: column;
+  justify-items: center; }
 
-#sub-title {
+:host(#banner-title) {
+  font-weight: 900;
+  text-align: center;
+  font-size: 60px; }
+
+:host(#banner-sub-title) {
   text-align: center;
   color: rgba(0, 0, 0, 0.64); }
 
