--- a/src/app/mommoo-library/ui/card/hash-tag-view/hash-tag-view.component.html
+++ b/src/app/mommoo-library/ui/card/hash-tag-view/hash-tag-view.component.html
@@ -1,8 +1,8 @@
 <ng-container *ngIf="isExistContents()">
-  <div *ngFor="let styledTextContent of computeStyledTextContents()"
+  <span *ngFor="let styledTextContent of computeStyledTextContents()"
        [style.backgroundColor]="backgroundColor"
        [ngStyle]="styledTextContent.style"
        class="message">
     {{styledTextContent.text}}
-  </div>
+  </span>
 </ng-container>
