--- a/src/app/mommoo-library/ui/card/card.component.scss
+++ b/src/app/mommoo-library/ui/card/card.component.scss
@@ -48,7 +48,7 @@
   }
 
   .container {
-    display : block;
+    display : flex;
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
