--- a/src/app/mommoo-library/ui/card/hash-tag-view/hash-tag-view.component.scss
+++ b/src/app/mommoo-library/ui/card/hash-tag-view/hash-tag-view.component.scss
@@ -1,11 +1,18 @@
+:host{
+  display : flex;
+  flex-wrap : wrap;
+  flex-direction: row;
+}
+
 .message{
-  display : inline-block;
+  width:auto;
   color : white;
   border-radius: 10px;
   padding : 3px 5px;
   font-size : 10px;
   &:nth-child(n) {
     margin-right : 5px;
+    margin-bottom : 5px;
   }
 
   &:nth-last-child(1) {
