## Refactoring Header Package  - optimize code with angular approach ( remove inconsistent css code that only concern user service execution )

--- a/src/app/view/header/header.component.html
+++ b/src/app/view/header/header.component.html
@@ -1,8 +1,8 @@
 <header id="header">
-  <div class="flex-column-line">
-    <div class="title">{{'mommoo portfolio' | uppercase}}</div>
+  <div id="flex-column-line">
+    <div id="title">{{'mommoo portfolio' | uppercase}}</div>
 
-    <view-menu-button class="menu-button"
+    <view-menu-button id="menu-button"
                      (menuButtonEvent)="fireMenuButtonEvent($event)"></view-menu-button>
   </div>
 
