--- a/src/app/view/header/header.component.css
+++ b/src/app/view/header/header.component.css
@@ -1,4 +1,5 @@
 :host {
+  background-color: #f3f3f3;
   display: block;
   width: 100%;
   height: 100%; }
@@ -6,12 +7,11 @@
 #header {
   width: 100%;
   height: 100%;
-  background-color: #f3f3f3;
   color: black;
   display: flex;
   flex-direction: column;
   align-items: center; }
-  #header .flex-column-line {
+  #header #flex-column-line {
     width: 100%;
     padding: 0 1.5rem;
     box-sizing: border-box;
@@ -19,21 +19,21 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between; }
-  #header .title {
+  #header #title {
     padding: 1rem 0;
     font-size: 1.5rem;
     font-weight: bold;
     box-sizing: border-box;
     text-align: center; }
-    #header .title:before {
+    #header #title:before {
       content: '#';
       color: #e91e63; }
 
 @media all and (min-width: 1025px) {
-  #header #title {
+  #header .title {
     padding: 4rem 0; }
 
-  .menu-button {
+  #menu-button {
     display: none; } }
 
 /*# sourceMappingURL=header.component.css.map */
