## Create New UI Component 'List'
## Refactoring and Optimizing UI Code

--- a/src/app/mommoo-library/ui/card/card.component.html
+++ b/src/app/mommoo-library/ui/card/card.component.html
@@ -10,6 +10,8 @@
                        [isAnimate]="cardImageAnim">
     </mommoo-card-image>
 
+    <!--<div *ngIf="cardTitle" id="card-title-box" [ngStyle]="cardTitleBoxStyle">{{cardTitle}}</div>-->
+
     <div id="card-content-box">
       <ng-content></ng-content>
     </div>
